{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 19,
  "lineage": "6c748d2c-7672-7153-67db-6dfefdbb5a2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca9cf8a296d6f3da",
            "arn": "arn:aws:ec2:us-west-2:442501350342:elastic-ip/eipalloc-0ca9cf8a296d6f3da",
            "association_id": "eipassoc-02778bbbd7597a1f2",
            "domain": "vpc",
            "id": "eipalloc-0ca9cf8a296d6f3da",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08cb0b6d0db41d7d6",
            "private_dns": "ip-172-55-1-241.us-west-2.compute.internal",
            "private_ip": "172.55.1.241",
            "public_dns": "ec2-54-203-131-84.us-west-2.compute.amazonaws.com",
            "public_ip": "54.203.131.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:internet-gateway/igw-0110d944ddc56c604",
            "id": "igw-0110d944ddc56c604",
            "owner_id": "442501350342",
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca9cf8a296d6f3da",
            "association_id": "eipassoc-02778bbbd7597a1f2",
            "connectivity_type": "public",
            "id": "nat-009f6a5a015ee041a",
            "network_interface_id": "eni-08cb0b6d0db41d7d6",
            "private_ip": "172.55.1.241",
            "public_ip": "54.203.131.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d918f7993678f7e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:route-table/rtb-0bb2c3effe0bc7591",
            "id": "rtb-0bb2c3effe0bc7591",
            "owner_id": "442501350342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0110d944ddc56c604",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:route-table/rtb-0e861e91d48264f51",
            "id": "rtb-0e861e91d48264f51",
            "owner_id": "442501350342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009f6a5a015ee041a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:subnet/subnet-08c9d5a8db59ee4d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.55.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c9d5a8db59ee4d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442501350342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:subnet/subnet-0b7dd58cf10b674d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.55.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7dd58cf10b674d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442501350342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:subnet/subnet-04d918f7993678f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.55.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d918f7993678f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442501350342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04419b8bfcd67c7a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:442501350342:vpc/vpc-04419b8bfcd67c7a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.55.0.0/20",
            "default_network_acl_id": "acl-00135c6ee00deec40",
            "default_route_table_id": "rtb-026333b4f04eb6d6e",
            "default_security_group_id": "sg-0bc47dd597f783d27",
            "dhcp_options_id": "dopt-b50c51de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04419b8bfcd67c7a6",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-04b45ee6728ab7b2c",
            "ipv4_netmask_length": 20,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026333b4f04eb6d6e",
            "owner_id": "442501350342"
          },
          "dependencies": [
            "aws_vpc_ipam.ipam",
            "aws_vpc_ipam_pool.ipam_pool",
            "aws_vpc_ipam_pool_cidr.ipam_cidr",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}